Big update with a little change

--- a/example.env
+++ b/example.env
@@ -6,3 +6,9 @@ MY_CHAT =
 
 #Delta time between game start (in seconds)
 TIME_DELTA = 300
+
+#LANGUAGE
+LANGUAGE = 'ru'
+
+WORDFILE = 'croco_ru.txt'
+#WORDFILE = 'croco_ua.txt'
