New localisation, delete .sqlite3 file

--- a/.env.example
+++ b/.env.example
@@ -7,8 +7,11 @@ MY_CHAT =
 #Delta time between game start (in seconds)
 TIME_DELTA = 300
 
-#LANGUAGE
 LANGUAGE = 'ru'
+#LANGUAGE = 'ua'
+#LANGUAGE = 'en'
+#LANGUAGE = 'ch'
+#LANGUAGE = 'de'
 
 WORDFILE = 'croco_ru.txt'
 #WORDFILE = 'croco_ua.txt'
